NOOP: Stop midword wrapping in narrative. Long urls will just be long i guess?

--- a/app/styles/odysseus-base.sass
+++ b/app/styles/odysseus-base.sass
@@ -671,7 +671,6 @@
     p
       line-height: 1.5em
       padding-bottom: 1em
-      word-break: break-all
 
     ul
       list-style-type: circle
